2008-04-14: Jason Long <jlong@messiah.edu>
 * Makefile.PL: bump version

 -- VERSION 0.31 --

2008-04-08: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/PrivateKey.pm: allow Cork argument to new() (#1879209)

2008-04-07: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DkimPolicy.pm: fix "use of uninitialized value in string"
   errors
 * lib/Mail/DKIM/Signature.pm: provide public API to public-key object of
   signatures, e.g. so its flags can be accessed (issue #1879215);
   also, if an error occurs fetching the public-key record, the failure
   is cached so it won't get tried again
 * lib/Mail/DKIM/Signer.pm: document how to create a DomainKey-Signature

2008-02-20: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/TextWrap.pm: implement BreakBefore option;
   provided a bunch of documentation for this module
 * t/textwrap.t: tests new functionality of TextWrap
 * lib/Mail/DKIM/KeyValueList.pm: colon-separated lists are now "wrapped"
   with colons appearing at the beginning of the next line instead of
   at the end of the current line (hoping this will fix #1868648)

2008-02-06: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signature.pm: conserve space by omitting "c=simple"
   and "q=dns/txt" (#1878518)

2008-02-06: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Canonicalization/DkCommon.pm, DkimCommon.pm:
   bugfix for issue #1878954 (undef value used as an ARRAY ref)
 * lib/Mail/DKIM/Canonicalization/DkCommon.pm: some cleanup,
   possible bugfix for verifying message with two+ DomainKey signatures
 * lib/Mail/DKIM/Verifier.pm: allow caller of fetch_author_policy() to
   specify domain (#1879197)
 * lib/Mail/DKIM/PrivateKey.pm: cleanup- indentation style;
   throw error on load() if missing argument

2008-01-24: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DkimPolicy.pm, Policy.pm, PublicKey.pm, Verifier.pm:
   fix parsing regexes used to split email address into localpart and
   domain (issue #1878994)

2008-01-10: Jason Long <jlong@messiah.edu>