@@ -7,7 +7,6 @@ WriteMakefile(
 	VERSION        => "0.31_8",
 	PREREQ_PM      => {
 			Crypt::OpenSSL::RSA => 0.24,
-			Digest::SHA1 => 0,
 			Digest::SHA => 0,
 			Mail::Address => 0,
 			MIME::Base64 => 0,
